# spln-2223

./: README.md
TP1/: final.json  main.py  output.xml  readme.md
TP2/: final.json  gramatica.txt  input.txt  lex.py  main.py  parser.py
TP2/Parte1/: final.json
TP2/Parte2/: input.txt
TP3/: gramatica.txt  yacc.py
TP4/: output.txt  tokenizer.py
TP5/: Harry_Potter_e_A_Pedra_Filosofal.txt  LICENSE  output.txt  pyproject.toml
TP5/tokenizador/: __init__.py  abrev.txt  utils.py
